infra/k8s/new-partner-routes-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: new-partner-routes-service
  name: new-partner-routes-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-partner-routes-service
  template:
    metadata:
      labels:
        app: new-partner-routes-service
    spec:
      containers:
        - image: tcc_new_partner_routes_service:0.0.1
          name: new-partner-routes-service
