infra/k8s/zpl-generate-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zpl-generate-service
  name: zpl-generate-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zpl-generate-service
  template:
    metadata:
      labels:
        app: zpl-generate-service
    spec:
      containers:
        - image: tcc_zpl_generate_service:0.0.1
          name: zpl-generate-service
