infra/k8s/legacy-system-postgresql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-legacy-system
spec:
  selector:
    matchLabels:
      app: postgres-legacy-system
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-legacy-system
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
        - name: postgres
          image: postgres:13
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgres-legacy-system-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: postgres-legacy-system
spec:
  selector:
    app: postgres-legacy-system
  ports:
    - port: 5432
  type: ClusterIP
