infra/k8s/partner-routes-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: partner-routes-api
  name: partner-routes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: partner-routes-api
  template:
    metadata:
      labels:
        app: partner-routes-api
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
        - image: tccpucbernardogomes.azurecr.io/tcc_partner_routes_api:0.0.5
          # - image: tcc_partner_routes_api:0.0.4
          name: partner-routes-api
          ports:
            - containerPort: 8000
              name: main
---
kind: Service
apiVersion: v1
metadata:
  name: partner-routes-api-service
  annotations:
    prometheus.io/scrape: "true"
spec:
  type: LoadBalancer
  selector:
    app: partner-routes-api
  ports:
    - port: 8000
