infra/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
spec:
  rules:
    - http:
        paths:
          # - pathType: Prefix
          #   path: "/partner-routes-api"
          #   backend:
          #     service:
          #       name: partner-routes-api-service
          #       port:
          #         number: 8000
          - pathType: Prefix
            path: "/deliveries-api"
            backend:
              service:
                name: deliveries-api-service
                port:
                  number: 8000
---
